# yagami

./: .gitignore  Cargo.toml  README.md  yagami.service
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
public/: index.html
src/: main.rs
