[package]
name = "yagami"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.4", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
