[package]
name = "yagami"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.4", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

[lints.clippy]
pedantic = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
